# weather-prediction-app

./: .env.example  .gitignore  .nixpacks.toml  .railway-ignore  .railwayapp.json  .railwayignore  CONFIGURATION_FIX_SUMMARY.md  CORS_FIX_URGENT.md  FRONTEND_CONNECTION_FIX.md  Procfile  Procfile.simple  RAILWAY_DEPLOYMENT.md  RAILWAY_DEPLOYMENT_SIMPLE.md  README.md  RENDER_DEPLOYMENT_CONFIG.md  URGENT_RENDER_FIX.md  nixpacks.toml  package.json  pyproject.toml  railway.toml  render.yaml  requirements.txt  run.py  runtime.txt  start.py  start.sh  start_simple.py  status.html  test-backend-connection.js  test-backend.js  test-config.js  test-cors.js  test-env-scenarios.js  vercel.json
.github/workflows/: ci.yml  post_deploy_smoke.yml  uptime_monitor.yml
backend/: Procfile  app.py  package-lock.json  package.json  railway.toml  requirements.txt
backend/api/: .env.example  .nixpacks.toml  app.py  app_config.py  config.py  requirements.txt
backend/models/: combined_weather_data_fe.csv  feature_list_lstm.json  feature_list_xgb.json  model_config.json  xgb_weather_combined.model
backend/utils/: predictor.py
frontend/: .env.example  next.config.js  package.json  vercel.json
frontend/app/: page.tsx  page_new.tsx
frontend/app/components/weather/: CurrentWeather.tsx  ForecastCard.tsx  LocationSearch.tsx  PredictionDisplay.tsx  WeatherBackground.tsx  header.tsx
frontend/app/config/: config.ts
