[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-prediction-api"
version = "1.0.0"
description = "Weather prediction API with machine learning"
authors = [{name = "Weather Prediction Team"}]
license = {text = "MIT"}
dependencies = [
    "flask==2.3.3",
    "flask-cors==4.0.0",
    "pandas==2.1.4",
    "numpy==1.26.4",
    "xgboost==2.0.2",
    "scikit-learn==1.3.2",
    "joblib==1.3.2",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "gunicorn==21.2.0",
    "Werkzeug==2.3.7"
]

[project.scripts]
start = "start:main"
